meditation and video access

--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
     "id": 96,
     "Name": "Buddhism and Mindfulness Meditation",
     "Seller": ["Pixel Perfex"],
-    "Tags": ["apps", "meditation", "Buddha's teachings aka Four Noble Truths, Eightfold Path, interdependent origination, five aggregates, etc.", "Age 9-12", "Age 13+"],
+    "Tags": ["apps", "Meditation", "Buddha's teachings aka Four Noble Truths, Eightfold Path, interdependent origination, five aggregates, etc.", "Age 9-12", "Age 13+"],
     "Language": ["English"],
     "Notes": "This free app is based on the book The Buddhist Way to Peace of Mind by the Thai forest tradition master Venerable Pramote Pamojjo. You can read the 120 page ebook with illustrations, or watch an 80 minute animation with English narrations. It is a good introduction to Buddhist thoughts.",
     "Url": "images/96-buddhismThai.png"
@@ -30,7 +30,7 @@
     "id": 97,
     "Name": "Imagine Clarity",
     "Seller": ["BN Clarity Inc Oy"],
-    "Tags": ["apps", "meditation", "compassion and loving kindness", "Age 2-5", "Age 6-8", "Age 9-12", "Age 13+"],
+    "Tags": ["apps", "Meditation", "compassion and loving kindness", "Age 2-5", "Age 6-8", "Age 9-12", "Age 13+"],
     "Language": ["English", "French"],
     "Notes": "This app is about meditation, not only in the sense of relaxing and feeling good, but training one's mind. It can be transformed so that one is able to cultivate basic human qualities such as benevolence, compassion, inner peace and inner strength. This way one's actions to benefit others, be a better person in society, care more for future generation are increased. The app offers in-app purchases, monthly or yearly plan, and some free contents for ages from 4 yo, and it takes us to basics of mind training, how to settle our mind, how to refine our attention, having more stable, clear, and calm mind. Specially one is able to develop an altruistic love, which is the best way to have a happy life and contribute to the happiness of others. Guided meditation, audios, contemplative aspects of arts created by Alan Wallace, Charles Hastings, Dominique Butet, Marie-Christine Champeaux-Cunin, Maria João Pires and Matthieu Ricard, are combined to encourage us to change the world from us. After reaching a big mass, it can change culture and institution eventually; there's no other way of changing society.",
         "Url": "images/97-imagineclarity.png"
@@ -39,7 +39,7 @@
     "id": 98,
     "Name": "Buddhify",
     "Seller": ["Mindfulness Everywhere"],
-    "Tags": ["apps", "meditation", "Age 6-8", "Age 9-12", "Age 13+"],
+    "Tags": ["apps", "Meditation", "Age 6-8", "Age 9-12", "Age 13+"],
     "Language": ["English"],
     "Notes": "On-the-go meditation app developed in order to help one gets to a point where one won't need it anymore. The meditation is categorised according to one’s activities or feelings and how much time there is available. Created by Rohan Gunatillake, mindfulness practitioner, this app costs $4.99.",
      "Url": "images/98-buddhify.png"
